--- a/freesound/static/bw-frontend/styles/molecules/modal.scss
+++ b/freesound/static/bw-frontend/styles/molecules/modal.scss
@@ -42,8 +42,11 @@
         border-radius: 5px;
         padding: 14px 21px;
         margin-bottom: 32px;
-        background-color: #f4f4f6;
-        border: 1px solid transparent;
+        color: $black;
+        background-color: $background-input;
+        border: 1px solid $border-input;
+        padding: 10px 20px;
+        border-radius: 5px;
 
         &:focus {
           border: 1px solid $black;
